@@ -1,3 +1,7 @@
+2003-06-16  William Jon McCann  <mccann@jhu.edu>
+
+	* Makefile.am (EXTRA_DIST): Added schemas.in.
+
 2003-06-13  William Jon McCann  <mccann@jhu.edu>
 
 	* glines.c: Make emacs mode line consistent with others.
